# halligan

./: .gitignore  pyproject.toml  scratch.ipynb  setup.py
requirements/: ax_0_4_3.txt  ax_0_5_0.txt
src/feature_importance/: __init__.py
src/halligan/: __init__.py  feature_importance.py  parameter_search.py
tests/: test_feature_importance.py
