[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halligan"
version = "0.1.0"
description = "Halligan for doing meta-optimization over candidate parameters with Ax"
requires-python = ">=3.8"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = ["pytest>=7.0"] 
